# SNL-Language-Compiler-Frontend-Written-By-Python

./: .gitignore  README.md  read_order.md
snl_compiler/: .gitignore  README.md  pyproject.toml
snl_compiler/src/snl_compiler/: __main__.py  cli.py  grammar.py  lexer.py  pipeline.py  semantic_analyzer.py  semantic_base.py  semantic_core.py  semantic_expr.py  semantic_proc.py  semantic_stmt.py  symbol_table.py  syntax_tree.py  tokens.py  types.py
snl_compiler/src/snl_compiler/rd_parser/: __init__.py  base.py  declarations.py  expressions.py  program.py  statements.py
snl_compiler/tests/: test_cli.py  test_coverage_boost.py  test_grammar.py  test_integration.py  test_internals.py  test_lexer.py  test_parser.py  test_parser_edge.py  test_semantic.py  test_semantic_extra.py  test_symbol_table.py  test_syntax_tree.py  test_types.py
snl_compiler/tests/fixtures/: command.txt
snl_compiler/tests/fixtures/lexical_errors/: illegal_char_at.snl  illegal_char_at_tokens.txt  illegal_char_at_词法错误.txt  illegal_char_exclaim.snl  illegal_char_exclaim_词法错误.txt  illegal_char_hash.snl  illegal_char_hash_词法错误.txt  illegal_char_percent.snl  illegal_char_percent_词法错误.txt  unclosed_comment.snl  unclosed_comment_tokens.txt  unclosed_comment_词法错误.txt
snl_compiler/tests/fixtures/normal/: correct_basic.snl  correct_basic_tokens.txt  correct_basic_符号表.txt  correct_basic_语法树.txt  correct_proc.snl  correct_proc_tokens.txt  correct_proc_符号表.txt  correct_proc_语义错误.txt  correct_proc_语法树.txt
snl_compiler/tests/fixtures/semantic_errors/: semantic_all_errors.snl  semantic_all_errors_tokens.txt  (+9 more)
(+25 files in other folders)
